# workshop-rocket-meetup008

./: Cargo.toml  README.md
src/: main.rs
templates/: index.html.tera
