[package]
name = "meetup08"
version = "0.1.0"
authors = ["Sebastián Magrí <sebasmagri@gmail.com>"]

[dependencies]
rand = "0.3.17"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.3.3"
default-features = false
features = ["tera_templates", "json"]
